src/App.css
.App {
  font-family: Arial, Helvetica, sans-serif;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

body {
  background-color: #ff9f9f;
  color: white;
}

.Menu, .Quiz {
  width: 50%;
  height: 50vh;
  border-radius: 10px;
  font-size: 1vw;
  padding: 30px;
  background-color: #f6827f;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.answers {
  display: flex;
  flex-direction: column;
  margin: 20px;
  justify-content: center;
  align-items: stretch;
  width: 50%;
  flex-wrap: wrap;
}

.answers button {
  margin: 5px;
  font-size: 1vw;
  padding: 10px;
  border-radius: 10px;
  border: none;
}

.nextBtn {
  width: 30%;
  padding: 10px;
  border-radius: 10px;
  border: none;
  color: white;
  background-color: #ff9f9f;
}

.Menu button {
  width: 30%;
  margin: 5px;
  padding: 20px;
  border: none;
  border-radius: 5px;
  font-size: 1.5vw;
  cursor: pointer;
  color: white;
  background-color: #ff9f9f;
}

.answers button:hover, .nextBtn:hover, .Menu button:hover {
  background-color: white;
  color: #ff9f9f;
}

.restart {
  width: 30%;
  margin: 5px;
  padding: 20px;
  border: none;
  border-radius: 5px;
  font-size: 1.5vw;
  cursor: pointer;
  color: white;
  background-color: #ff9f9f;
}


@media screen and (max-width: 1200px) {
  .Menu, .Quiz, .answers button {
    font-size: 1.5vw;
  }

  .Menu button, .restart {
    font-size: 2vw;
  }
}


@media screen and (max-width: 980px) {
  .Menu, .Quiz, .answers button {
    font-size: 1.75vw;
  }

  .Menu button, .restart {
    font-size: 2.25vw;
    width: 70%;
  }
}

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {
  .Menu, .Quiz, .answers button {
    font-size: 1.75vw;
  }

  .Menu button, .restart {
    font-size: 2.25vw;
    width: 70%;
  }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {
  .Menu, .Quiz, .answers button {
    font-size: 2.25vw;
  }

  .Menu button, .restart {
    font-size: 2.75vw;
    width: 80%;
  }
}

@media screen and (max-width: 375px) {
  .Menu, .answers button {
    font-size: 3.2vw;
  }
  .Quiz {
    font-size: 2.1vw;
  }
  .Menu button, .restart {
    font-size: 5vw;
    width: 80%;
  }
  .nextBtn {
    font-size: 2.5vw;
  }

}

